# jobapp

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt
config.example/: README.txt  default.yaml  resume_writer.yaml  search.yaml
config.example/data/user/: experiences.md
docs/: ai_optimization.md  architecture.md  browser-modes.md  configuration.md  cross-platform-chrome-usage.md  openai_anthropic_integration.md  rate_limiting_quick_reference.md  system-chrome-usage.md
docs/core/: cross-platform-chrome-usage.md  rate_limiting_quick_reference.md
docs/resume_writer/: ai_optimization.md
docs/search/: search.md
jobapp/: __main__.py  main.py
jobapp/core/: api_key_manager.py  chrome_manager.py  config_manager.py  llm_interface.py  logger.py  sheets_manager.py
jobapp/resume_writer/: __init__.py  batch_optimizer.py  compiler.py  graph_utils.py  main.py  parser.py  utils.py  yaml_processing_utils.py
jobapp/resume_writer/legacy_pipeline_7_prompts/: langgraph_resume_pipeline.py  output_manager.py
jobapp/resume_writer/pipelines/: __init__.py  langgraph_resume_pipeline.py  output_manager.py  prompts.py  resume_pipeline.py
jobapp/search/: linkedin_scraper.py  main.py  manual_login_playwright.py  match_score_calculator.py  match_score_calculator_prompt.py
jobapp/utils/: __init__.py  filename.py  fuzzy_find.py
