[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jobapp"
version = "0.1.0"
description = "Personal job application automation tool"
authors = [{name = "Ray Hagimoto"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==24.1.0",
    "annotated-types==0.7.0",
    "anthropic==0.55.0",
    "anyio==4.9.0",
    "authlib==1.6.0",
    "backoff==2.2.1",
    "beautifulsoup4==4.13.4",
    "browser-use==0.4.0",
    "bubus==1.2.2",
    "cachetools==5.5.2",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "cryptography==45.0.4",
    "distro==1.9.0",
    "filetype==1.2.0",
    "google-ai-generativelanguage==0.6.18",
    "google-api-core==2.25.1",
    "google-auth==2.40.3",
    "google-auth-oauthlib==1.2.2",
    "google-genai==1.22.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.3",
    "groq==0.29.0",
    "grpcio==1.73.1",
    "grpcio-status==1.73.1",
    "gspread==6.2.1",
    "h11==0.16.0",
    "h2==4.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jinja2==3.1.6",
    "jiter==0.10.0",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.26",
    "langchain-anthropic==0.3.16",
    "langchain-core==0.3.66",
    "langchain-google-genai==2.1.5",
    "langchain-openai==0.3.26",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.5.0",
    "langgraph-checkpoint==2.1.0",
    "langgraph-prebuilt==0.5.1",
    "platformdirs",
    "oauth2client",
    "pandas",
]
[project.scripts]
jobapp = "jobapp.main:main"

[tool.setuptools.packages.find]
include = ["jobapp*"]

[tool.setuptools.package-data]
jobapp = ["configs/**/*", "resume_writer/resume_template/**/*"] 
